[package]
name = "peko"
version = "0.1.0"
authors = ["Ho Tuan Kiet <tuankiet65@gmail.com>"]
edition = "2018"
description = "Ethereum client written in Rust"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.6"
