[package]
name = "peko-rlp"
version = "0.1.0"
authors = ["Ho Tuan Kiet <tuankiet65@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uint = "0.8.5"
serde = { version = "1.0.118", features = ["derive"] }

[dev-dependencies]
hex-literal = "0.3.1"
